--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
+
+h1 {
+    font-family: ‘Metrophobic’, Arial, serif; font-weight: 400;
+}
+
+p {
+    font-family: ‘Metrophobic’, Arial, serif; font-weight: 400;
+}
+
+input[type=button] {
+    /* button style */
+}
+
 .game_area {
     position: absolute;
     top: 20px;
@@ -33,9 +46,19 @@ input {
 
 .instructions {
     position: absolute;
-    top: 470px;
+    top: 0px;
+    left: 850px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .field_item {
     position: absolute;
+}
+
+.info-area {
+    background-color: rgb(252,221,255);
+    border: solid 1px rgb(255,0,220);
+    display: inline-block;
+    padding: 10px;
 }
