--- a/style.css
+++ b/style.css
@@ -3,14 +3,67 @@ h1, p {
     font-family: ‘Metrophobic’, Arial, serif; font-weight: 400;
 }
 
+/* Button is generated from http://www.bestcssbuttongenerator.com/ */
 input {
-    /* button style */
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #fcddff), color-stop(1, #cd7cd6));
+    background:-moz-linear-gradient(top, #fcddff 5%, #cd7cd6 100%);
+    background:-webkit-linear-gradient(top, #fcddff 5%, #cd7cd6 100%);
+    background:-o-linear-gradient(top, #fcddff 5%, #cd7cd6 100%);
+    background:-ms-linear-gradient(top, #fcddff 5%, #cd7cd6 100%);
+    background:linear-gradient(to bottom, #fcddff 5%, #cd7cd6 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#fcddff', endColorstr='#cd7cd6',GradientType=0);
+    background-color:#fcddff;
+    -moz-border-radius:4px;
+    -webkit-border-radius:4px;
+    border-radius:4px;
+    border:1px solid #de84e8;
+    display:inline-block;
+    cursor:pointer;
+    color:#000000;
+    font-family:Courier New;
+    font-size:17px;
+    padding:4px 16px;
+    text-decoration:none;
+    text-shadow:0px 0px 0px #fcddff;
+}
+
+input:hover {
+    background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #cd7cd6), color-stop(1, #fcddff));
+    background:-moz-linear-gradient(top, #cd7cd6 5%, #fcddff 100%);
+    background:-webkit-linear-gradient(top, #cd7cd6 5%, #fcddff 100%);
+    background:-o-linear-gradient(top, #cd7cd6 5%, #fcddff 100%);
+    background:-ms-linear-gradient(top, #cd7cd6 5%, #fcddff 100%);
+    background:linear-gradient(to bottom, #cd7cd6 5%, #fcddff 100%);
+    filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#cd7cd6', endColorstr='#fcddff',GradientType=0);
+    background-color:#cd7cd6;
+}
+
+input:active {
+    position:relative;
+    top:1px;
+}
+
+input.run {
+    float: right;
+}
+
+input.restart {
+    display: none;
+    left: 20px;
+    position: absolute;
+    top: 436px;
+}
+
+textarea {
+    width: 224px;
+    height: 366px;
 }
 
 .game_area {
     position: absolute;
     top: 20px;
     left: 20px;
+    cursor: pointer;
 }
 
 .game_menu, .field {
@@ -39,7 +92,7 @@ input {
 
 .instructions {
     position: absolute;
-    left: 850px;
+    left: 810px;
     margin-left: 10px;
     margin-right: 10px;
 }
