--- a/style.css
+++ b/style.css
@@ -23,13 +23,34 @@ form {
 }
 
 input {
-    display: block;
+    background: linear-gradient(to bottom, #fcddff 5%, #cd7cd6 100%);
+    border-radius: 4px;
+    border: 1px solid #de84e8;
+    display: inline-block;
     float: right;
+    cursor: pointer;
+    color: #000000;
+    font-family: Courier New;
+    font-size: 17px;
+    padding: 4px 16px;
+    margin-top: 4px;
+    margin-left: 6px;
+    text-decoration: none;
+    text-shadow: 0px 0px 0px #fcddff;
+}
+
+input:hover {
+    background: linear-gradient(to bottom, #cd7cd6 5%, #fcddff 100%);
+}
+
+input:active {
+    position: relative;
+    top: 1px;
 }
 
 textarea {
     width: 224px;
-    height: 369px;
+    height: 364px;
 }
 
 .info-area {
