--- a/style.css
+++ b/style.css
@@ -54,6 +54,11 @@ input:disabled {
     border-color: #d9d9d9;
 }
 
+input.clear {
+    float: left;
+    margin-left: 0;
+}
+
 textarea {
     width: 224px;
     height: 364px;
